--- a/aoai-python/.env.example
+++ b/aoai-python/.env.example
@@ -1,11 +1,13 @@
-AZ_OPENAI_API_VERSION = "2023-09-01-preview"
-AZ_OPENAI_EMBEDDING_API_VERSION = "2023-05-15"
+OPENAI_API_TYPE = "azure"
 
-AZ_OPENAI_API_KEY = "<YOUR AZURE OPENAI API KEY - If using Azure AD auth, this can be left empty>"
-AZ_OPENAI_ENDPOINT = "<YOUR AZURE OPENAI ENDPOINT>"
+AZURE_OPENAI_API_VERSION = "2023-09-01-preview"
+AZURE_OPENAI_EMBEDDING_API_VERSION = "2023-05-15"
 
-AZ_OPENAI_COMPLETION_MODEL = "<YOUR OPENAI COMPLETIONS MODEL NAME - e.g. gpt-35-turbo>"
-AZ_OPENAI_COMPLETION_DEPLOYMENT_NAME = "<YOUR AZURE OPENAI COMPLETIONS DEPLOYMENT NAME - e.g. gpt-35-turbo>"
+AZURE_OPENAI_API_KEY = "<YOUR AZURE OPENAI API KEY - If using Azure AD auth, this can be left empty>"
+AZURE_OPENAI_ENDPOINT = "<YOUR AZURE OPENAI ENDPOINT>"
 
-AZ_OPENAI_EMBEDDING_MODEL = "<YOUR OPENAI EMBEDDING MODEL NAME - e.g. text-embedding-ada-002>"
-AZ_OPENAI_EMBEDDING_DEPLOYMENT_NAME = "<YOUR AZURE OPENAI EMBEDDINGS DEPLOYMENT NAME - e.g. text-embedding-ada-002>"
+AZURE_OPENAI_COMPLETION_MODEL = "<YOUR OPENAI COMPLETIONS MODEL NAME - e.g. gpt-35-turbo>"
+AZURE_OPENAI_COMPLETION_DEPLOYMENT_NAME = "<YOUR AZURE OPENAI COMPLETIONS DEPLOYMENT NAME - e.g. gpt-35-turbo>"
+
+AZURE_OPENAI_EMBEDDING_MODEL = "<YOUR OPENAI EMBEDDING MODEL NAME - e.g. text-embedding-ada-002>"
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME = "<YOUR AZURE OPENAI EMBEDDINGS DEPLOYMENT NAME - e.g. text-embedding-ada-002>"
